# kl-score

./: .gitignore  .worktreeinclude  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  catalog-info.yaml  pyproject.toml
docs/decisions/: ADR-001-metricas-canonical-v0.md
kl_score/: cli.py  metrics.py  parser.py
reports/: baseline-2026-06-18.md  baseline-2026-06-24.md  baseline-gaps-filtrado-2026-06-24.md  onda-4-cross-2026-06-19.md  onda-4-post-2026-06-19.md  onda-4-recal-2026-06-19.md
tests/: test_cli.py  test_metrics.py
tests/fixtures/sample_graph/journals/: 2026_06_19.md
tests/fixtures/sample_graph/pages/: conhecimento-tacito.md  knowledge-layer.md  wiki-compile.md
tests/fixtures/sample_graph/pages/sources/: sample-source.md
